--- a/src/app/Components/Sections/controller/controller.component.html
+++ b/src/app/Components/Sections/controller/controller.component.html
@@ -8,8 +8,8 @@
       <h2>Camera</h2>
       <div class="flex space-x-4 controlesmiddle">
         <!-- Botón Izquierda -->
-        <button (click)="control('i')" [disabled]="disabled" class="brazo piti text-white font-bold py-4 px-6 shadow-lg text-lg">
-          <i class="bi bi-arrow-left">i</i>
+        <button (click)="control('p')" [disabled]="disabled" class="brazo piti text-white font-bold py-4 px-6 shadow-lg text-lg">
+          <i class="bi bi-arrow-left">p</i>
         </button>
     
         <!-- Botón Pitido -->
@@ -18,8 +18,8 @@
         </button>
     
         <!-- Botón Derecha -->
-        <button (click)="control('p')" [disabled]="disabled" class="brazo piti text-white font-bold py-4 px-6 shadow-lg text-lg">
-          <i class="bi bi-arrow-right">P</i>
+        <button (click)="control('i')" [disabled]="disabled" class="brazo piti text-white font-bold py-4 px-6 shadow-lg text-lg">
+          <i class="bi bi-arrow-right">i</i>
         </button>
       </div>
 
