--- a/src/app/Components/Sections/controller/controller.component.html
+++ b/src/app/Components/Sections/controller/controller.component.html
@@ -9,7 +9,7 @@
       <div class="flex space-x-4 controlesmiddle">
         <!-- Botón Izquierda -->
         <button (click)="control('p')" [disabled]="disabled" class="brazo piti text-white font-bold py-4 px-6 shadow-lg text-lg">
-          <i class="bi bi-arrow-left">p</i>
+          <i class="bi bi-arrow-left">i</i>
         </button>
     
         <!-- Botón Pitido -->
@@ -19,7 +19,7 @@
     
         <!-- Botón Derecha -->
         <button (click)="control('i')" [disabled]="disabled" class="brazo piti text-white font-bold py-4 px-6 shadow-lg text-lg">
-          <i class="bi bi-arrow-right">i</i>
+          <i class="bi bi-arrow-right">p</i>
         </button>
       </div>
 
