--- a/src/app/Views/Notfound/notfound/notfound.component.html
+++ b/src/app/Views/Notfound/notfound/notfound.component.html
@@ -5,7 +5,7 @@
         <p
           class="text-2xl md:text-3xl font-light leading-normal"
         >Lo sentimos, pero no pudimos encontrar la pagina que estas buscando. </p>
-        <p class="mb-8">Pero no te preocupes, puedes encontrar un monton de cosas mas en nuestra dashboard</p>
+        <p class="mb-8">Pero no te preocupes, puedes encontrar un monton de cosas mas en nuestro juego</p>
   
       </div>
       <div class="max-w-lg">
