--- a/src/app/Components/Sections/controller/controller.component.css
+++ b/src/app/Components/Sections/controller/controller.component.css
@@ -13,14 +13,22 @@
     gap: 4vh;
 }
 
+.grille2 {
+    display: grid;
+    height: 50%;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr ;
+}
+
+
 .luces {
     display: flex;
     width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
-    gap: 2vh;
-    padding: 2vh;
+    gap: 1vh;
+    padding: 1vh;
     flex-direction: column;
 }
 
@@ -48,12 +56,7 @@
     flex-direction: column;
 
 }
-.grille2 {
-    display: grid;
-    height: 50%;
-    width: 100%;
-    grid-template-columns: 50% 50%;
-}
+
 .botonesextra {
     width: 40%;
     height: 100%;
