--- a/src/app/Views/DevicesIndex/devicesindex/devicesindex.component.html
+++ b/src/app/Views/DevicesIndex/devicesindex/devicesindex.component.html
@@ -1,5 +1,6 @@
 <app-GlobalLoader *ngIf="isSubmitting" />
-<div class="flex items-center justify-center h-screen">
+<h1 class="titulo">Devices</h1>
+<div class="flex items-center justify-center ksks">
     <div *ngIf="empty" class="flex items-center justify-center text-white text-sm">
         No hay dispositivos que mostrar
     </div>
@@ -25,9 +26,6 @@
                     </th>
                     <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
                         ID user
-                    </th>
-                    <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider rounded-r-xl">
-                        Acciones
                     </th>
                 </tr>
             </thead>
@@ -68,13 +66,6 @@
                         </div>
                       </td>
                       
-                    <td class="px-5 py-5 border-b border-gray-200 text-sm">
-                        <div class="flex space-x-4 justify-center">
-                            <button class="px-4 py-2 bg-red-500 text-white font-bold rounded hover:bg-red-700 flex items-center">
-                                <i class="fas fa-ban"></i><span class="ml-2">Deshabilitar</span>
-                              </button>
-                        </div>
-                    </td>
                 </tr>
             </tbody>
             
