--- a/src/app/Components/Cards/device-row-user/device-row-user/device-row-user.component.css
+++ b/src/app/Components/Cards/device-row-user/device-row-user/device-row-user.component.css
@@ -21,3 +21,28 @@
       transparent 100%
     );
   }
+
+
+  .btnns{ 
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 1vh;
+  }
+  .unlink {
+    color: white;
+    background-color: rgb(94, 0, 0);
+    border-radius: 2vh;
+    width: 12vh;
+    height: 6vh;
+  }
+
+  .selectt {
+    color: white;
+    background-color: rgb(0, 14, 94);
+    border-radius: 2vh;
+    width: 12vh;
+    height: 6vh;
+  }
