--- a/src/app/Views/UserUpdate/user-update.component.css
+++ b/src/app/Views/UserUpdate/user-update.component.css
@@ -5,11 +5,19 @@
   color: #C5D1DE;
 }
 
+.img{
+  width: 15vh;
+  height: 10vh;
+}
 .deviceuser{
   display: flex;
   background-color: rgba(0, 0, 0, 0.425);
   border-radius: 2vh;
-
+  align-items: center;
+  justify-content:center;
+width: 100%;
+height: 100%;
+flex-direction: column;
 }
 .segundoup {
   display: grid;
