--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.css
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.css
@@ -15,6 +15,10 @@ section{
     background-position: center;
 }
 
+
+.secta {
+    height: 100vh;
+}
 .cover{
     display: flex;
     justify-content: center;
